<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DOPE</string>
    <string name="action_settings">Settings</string>
    <string name="action_save">Save</string>
    <string name="action_end">End</string>
    <string name="action_cancel">Cancel</string>
    <string name="title_activity_new_session">NewSessionActivity</string>
    <string name="editText_hint_temperature">add temperature…</string>
    <string name="editText_hint_location">add location…</string>
    <string name="editText_hint_distance">add distance…</string>
    <string name="editText_hint_windspeed">add wind speed…</string>
    <string name="textView_temperature">Temperature:</string>
    <string name="textView_location">Location:</string>
    <string name="textView_dateTime">Date/Time:</string>
    <string name="temperatureUnit_celsius">°C</string>
    <string name="temperatureUnit_fahrenheit">°F</string>
    <string name="textView_distance">Distance:</string>
    <string name="switch_distanceUnit_yards">" Yards"</string>
    <string name="switch_distanceUnit_meters">" Meters"</string>
    <string name="title_activity_shot">ShotActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_load_session">LoadSessionActivity</string>
    <string name="title_activity_load_shot">LoadShotActivity</string>
    <string name="title_activity_options">OptionsActivity</string>
    <string name="txtView_distance">Distance: </string>
    <string name="txtView_windspeed">Wind Speed: </string>
    <string name="title_activity_shot_hit">ShotHitActivity</string>
    <string name="homescreen_title">DOPE</string>
    <string name="homescreen_subtitle">The Shooter\'s Data Log</string>

</resources>
