<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="cpe.dope.ShotActivity">

    <item android:id="@+id/action_one"
        android:title="@string/action_save"
        android:icon="@android:drawable/ic_media_next"
        android:showAsAction="always" />

    <item android:id="@+id/action_two"
        android:title="@string/action_end"
        android:icon="@android:drawable/ic_menu_save"
        android:showAsAction="always" />

    <item android:id="@+id/action_cancel"
        android:title="@string/action_cancel"
        android:icon="@android:drawable/ic_menu_close_clear_cancel"
        android:showAsAction="always" />

    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:icon="@android:drawable/ic_menu_preferences"
        android:showAsAction="never" />
</menu>
